tech(#566): RSR-1519 - update Maven dependencies
Signed-off-by: massifben <105049157+massifben@users.noreply.github.com>